
#set(CMAKE_C_COMPILER gcc)
#set(CMAKE_CXX_COMPILER g++)

#cmake_minimum_required(VERSION 3.20.1)
#project(b+tree)

#set(CMAKE_EXPORT_COMPILE_COMMANDS on)

##include_directories(include)

#add_subdirectory(src) 


set(CMAKE_C_COMPILER gcc)
set(CMAKE_CXX_COMPILER g++)

cmake_minimum_required(VERSION 3.20.1)
project(b+tree)

set(CMAKE_EXPORT_COMPILE_COMMANDS on)

#include_directories(include)

add_subdirectory(src) 